--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -119,7 +119,7 @@
     "notifications": "Notifications",
     "userProfile": "Perfil de usuario",
     "tableList": "Table List",
-    "typography": "Typography",
+    "monitoreo": "Monitoreo",
     "rtlSupport": "RTL Support",
     "rutas": "Gestión de Rutas",
     "sedes": "Gestión de Sedes",
