Simulacion Colapso y Arreglo Final de Semanal

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -115,10 +115,10 @@
     "shortTitle": "RX",
     "dashboard": "dashboard",
     "icons": "Icons",
-    "maps": "Simulación",
+    "maps": "Simulación Semanal",
     "notifications": "Notifications",
     "userProfile": "Perfil de usuario",
-    "tableList": "Table List",
+    "Colapso": "Simulación Colapso",
     "monitoreo": "Monitoreo",
     "rtlSupport": "RTL Support",
     "rutas": "Gestión de Rutas",
